<resources>
    <string name="app_name">TempLac</string>
    <string name="nomApp">Tempéo</string>
    <string name="btnSaisie">Saisir un relevé</string>
    <string name="btnRecherche">Rechercher un relevé</string>
    <string name="btnMoyenne">Afficher la moyenne d\'un mois</string>
    <string name="btnRechercheUnReleve">Rechercher</string>
    <string name="nomLacRecherche">Nom du lac</string>
    <string name="HeureRecherche">Horaire</string>
    <string name="SaisirNomLac">Saisir nom du lac</string>
    <string name="SaisirLongitude">Saisir la longitude</string>
    <string name="SaisirLatitude">Saisir la latitude</string>
    <string name="SaisirTemp">Saisir la température</string>
    <string name="btnEnregistrer">Enregistrer</string>
    <string name="btnQuitter">QUITTER</string>
    <string name="btnAfficherMoyenne">CALCULER LA MOYENNE</string>
    <string name="NomLacAfficher">Nom du lac</string>
    <string name="tempAfficher">Température</string>
    <string name="btnOK">OK</string>
    <string name="Date">AAAA-MM-DD</string>
    <string name="Date2">Entrez une journée du mois voulu</string>
    <string name="hintMoyenneResultat">Température Moyenne</string>
    <string name="HintNomLac">Nom du lac</string>
    <string name="heure">Heure</string>
    <string name="btnRetour">RETOUR</string>
    <string name="libelleTempAfficher18h">Relevé à 18h</string>
    <string name="libelleTempAfficher12h">Relevé à 12h</string>
    <string name="libelleTempAfficher6h">Relevé à 6h</string>
    <string name="libelleTempAfficher0h">Relevé à 0h</string>
    <string name="libellePosGPS">Position GPS</string>
    <string name="libelleNomLacAfficher">Nom du Lac</string>
    <string name="tempCelcius">Celcius</string>
    <string name="tempFahr">Fahrenheit</string>
    <string name="libelleTempAfficherHeure">Heure du relevé</string>
    <string name="libelleTempAfficher">Température</string>
    <string name="rien" />
    <string name="libelMoyenne">Moyenne :</string>
</resources>