<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/nomApp" />

        <Spinner
            android:id="@+id/listeNomLacMoyenne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/dateMoyenne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/Date2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/libelMoyenne" />

            <TextView
                android:id="@+id/textViewMoyenne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintMoyenneResultat" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/btnChoix1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/btnCelcius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempCelcius" />

            <RadioButton
                android:id="@+id/btnFahr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempFahr" />
        </RadioGroup>

        <Button
            android:id="@+id/btnAfficherMoyenne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAfficherMoyenne"
            />

        <Button
            android:id="@+id/btnQuitterMoyenne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnQuitter" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>